# lib2geom

./: .gitignore  .gitlab-ci.yml  2GeomConfig.cmake  AUTHORS.md  CMakeLists.txt  HACKING.md  LICENSE.md  NEWS.md  README.md  README.win32.md  RELEASING.md  TODO.md
CMakeScripts/: Dist.cmake  RewriteLineMarkers.cmake
include/2geom/: angle.h  bezier-curve.h  bezier.h  convex-hull.h  coord.h  curve.h  curves.h  elliptical-arc.h  generic-interval.h  generic-rect.h  int-interval.h  int-point.h  interval.h  path-sink.h  path.h  pathvector.h  point.h  polynomial.h  rotated-rect.h  sbasis-curve.h  sbasis-geometric.h  svg-path-writer.h  transforms.h  utils.h
include/2geom/numeric/: fitting-tool.h
include/2geom/symbolic/: multipoly.h
include/toys/: toy-framework-2.h
src/: CMakeLists.txt
src/2geom/: CMakeLists.txt  basic-intersection.cpp  bezier-clipping.cpp  bezier-curve.cpp  bezier-utils.cpp  bezier.cpp  concepts.cpp  conic_section_clipper_impl.cpp  conicsec.cpp  convex-hull.cpp  coord.cpp  curve.cpp  d2-sbasis.cpp  ellipse.cpp  elliptical-arc.cpp  intersection-graph.cpp  line.cpp  math-utils.h  path-intersection.cpp  path-sink.cpp  path.cpp  pathvector.cpp  planar-graph.h  point.cpp  polynomial.cpp  rotated-rect.cpp  rotated-rect.h  sbasis-geometric.cpp  sbasis-to-bezier.cpp  self-intersect.cpp  solve-bezier-one-d.cpp  solve-bezier.cpp  svg-path-parser.cpp  svg-path-writer.cpp
src/2geom/orphan-code/: rtree.cpp
src/cython/: README.md  _cy_affine.pyx  _cy_curves.pyx  _cy_rectangle.pyx  report.md
src/performance-tests/: CMakeLists.txt  bezier-utils-test.cpp  boolops-performance-test.cpp
src/py2geom/: CMakeLists.txt  __init__.py  conic.cpp
src/tests/: CMakeLists.txt  convex-hull-test.cpp  ellipse-test.cpp  parallelogram-test.cpp  rotated-rect-test.cpp
src/toys/: 2dsb2d.cpp  CMakeLists.txt  aa.cpp  arc-length-param.cpp  auto-cross.cpp  boolops-toy.cpp  bound-path.cpp  bounds-test.cpp  box3d.cpp  circle-fitting.cpp  circle-intersect.cpp  circle-line-intersect.cpp  circle-tangent-fitting.cpp  collinear-normal.cpp  conic-3.cpp  conic-5.cpp  conic-6.cpp  conic-section-toy.cpp  convole.cpp  curve-curve-distance.cpp  curve-curve-nearest-time.cpp  curve-intersection-by-bezier-clipping.cpp  curve-intersection-by-implicitization.cpp  cylinder3d.cpp  ellipse-area-minimizer.cpp  ellipse-bezier-intersect-toy.cpp  ellipse-fitting.cpp  ellipse-intersect-toy.cpp  ellipse-line-intersect-toy.cpp  elliptiarc-3point-center-fitting.cpp  elliptiarc-curve-fitting.cpp  elliptical-arc-toy.cpp  evolute.cpp  filet-minion.cpp  find-derivative.cpp  hatches.cpp  implicit-toy.cpp  ineaa.cpp  inner-product-clip.cpp  intersect-data.cpp  (+44 more)
tests/: CMakeLists.txt  affine-test.cpp  angle-test.cpp  bezier-test.cpp  choose-test.cpp  circle-test.cpp  convex-hull-test.cpp  coord-test.cpp  ellipse-test.cpp  elliptical-arc-test.cpp  intersection-graph-test.cpp  interval-test.cpp  line-test.cpp  min-bbox-test.cpp  nl-vector-test.cpp  parallelogram-test.cpp  path-test.cpp  planar-graph-test.cpp  point-test.cpp  polynomial-test.cpp  rect-test.cpp  root-find-test.cpp  rotated-rect-test.cpp  sbasis-test.cpp  self-intersections-test.cpp  testing.h
tests/dependent-project/: .gitignore  CMakeLists.txt  build-and-run.sh  build.sh  main.cpp  my_lib.cpp  my_lib.h
tools/: download-and-build-gtest.sh
