add_library(gtest SHARED googletest/googletest/src/gtest-all.cc)
target_include_directories(gtest PRIVATE googletest/googletest)
target_link_libraries(gtest Threads::Threads)
add_library(gtest_main STATIC googletest/googletest/src/gtest_main.cc)

add_subdirectory(2geom)
add_subdirectory(tests)
add_subdirectory(performance-tests)
if(GTK3_FOUND)
  add_subdirectory(toys)
else()
  message("Not building toys as they require GTK3.")
endif()

add_subdirectory(cython)
add_subdirectory(py2geom)
